# Simple-Clipper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Simple-Clipper/: Simple-Clipper.sln
Simple-Clipper/Simple-Clipper/: Simple-Clipper.vcxproj  Simple-Clipper.vcxproj.filters  SimpleClipper.cpp  SimpleClipper.hpp  main.cpp
Simple-Clipper/Simple-Clipping/: Simple-Clipping.vcxproj  Simple-Clipping.vcxproj.filters  SimpleClipper.hpp  main.cpp
Simple-Clipping/Simple-Clipping/: Simple-Clipping.vcxproj  Simple-Clipping.vcxproj.filters  SimpleClipping.hpp
src/: CMakeLists.txt  SimpleClipper.cpp  SimpleClipper.hpp  main.cpp
tools/: display_polygons.py
